--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 .sts4-cache
 
 ### IntelliJ IDEA ###
-.idea
+
 *.iws
 *.iml
 *.ipr
@@ -23,3 +23,5 @@
 /dist/
 /nbdist/
 /.nb-gradle/
+/.svn/
+/.idea/libraries/
